[project]
name = "annotation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "loguru>=0.7.3",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
extend-select = ["I"]
